syntax = "proto3";

package service.ourchat.msg_delivery.v1;

import "google/protobuf/timestamp.proto";
import "service/ourchat/friends/accept_friend_invitation/v1/accept_friend_invitation.proto";
import "service/ourchat/friends/add_friend/v1/add_friend.proto";
import "service/ourchat/msg_delivery/announcement/v1/announcement.proto";
import "service/ourchat/msg_delivery/recall/v1/recall.proto";
import "service/ourchat/session/allow_user_join_session/v1/allow_user_join_session.proto";
import "service/ourchat/session/invite_user_to_session/v1/invite_user_to_session.proto";
import "service/ourchat/session/join_session/v1/join_session.proto";
import "service/ourchat/session/session_room_key/v1/session_room_key.proto";

message SendMsgRequest {
  // from which session
  uint64 session_id = 1;
  Msg msg = 3;
  bool is_encrypted = 4;
}

message FetchMsgsRequest {
  // Get messages after this time
  google.protobuf.Timestamp time = 1;
}

message FetchMsgsResponse {
  // different type of message
  oneof respond_event_type {
    Msg msg = 1;
    session.invite_user_to_session.v1.InviteUserToSession invite_user_to_session = 2;
    friends.accept_friend_invitation.v1.FriendInvitationResultNotification friend_invitation_result_notification = 3;
    recall.v1.RecallNotification recall = 4;
    session.join_session.v1.JoinSessionApproval join_session_approval = 7;
    session.allow_user_join_session.v1.AllowUserJoinSessionNotification allow_user_join_session_notification = 9;
    friends.add_friend.v1.NewFriendInvitationNotification new_friend_invitation_notification = 8;
    announcement.v1.AnnouncementResponse announcement_response = 10;
    session.invite_user_to_session.v1.AcceptSessionNotification accept_session_approval = 11;
    session.session_room_key.v1.ReceiveRoomKeyNotification receive_room_key = 12;
    session.session_room_key.v1.SendRoomKeyNotification send_room_key = 13;
    session.session_room_key.v1.UpdateRoomKeyNotification update_room_key = 14;
  }
  // id of the message
  uint64 msg_id = 5;
  // time of the message
  google.protobuf.Timestamp time = 6;
}

message Msg {
  string markdown_text = 2;
  repeated string involved_files = 3;
  // from which session
  uint64 session_id = 4;
  // Sender id
  uint64 sender_id = 5;
  // Encrypted
  bool is_encrypted = 6;
}

message SendMsgResponse {
  // id of the message
  uint64 msg_id = 1;
  // time the message is sent
  google.protobuf.Timestamp time = 2;
}
